Downgrade the Java version to be 8